syntax = "proto3";

option csharp_namespace = "GrpcService";

import "google/protobuf/timestamp.proto";

package greet;

service WheaterForecasts {
  rpc GetForecasts (ForecastsRequest) returns (WeatherForecastResponse);
}

message ForecastsRequest {
  int32 days = 1;
}

message WeatherForecastResponse {
  repeated WeatherForecast weather_forecasts =1;
}

message WeatherForecast {
  google.protobuf.Timestamp date = 1;
  int32 temperature_c = 2; 
  string summary = 3;
}